assets/css/main.css
html,
body {
  height: 100%;
}
body {
  background-color: #1e1e1e;
  color: var(--light);
}
a,
a:focus,
a:hover {
  color: inherit;
  text-decoration: none;
}
hr {
  border-color: #666;
}
i[class*="fa-"],
i[class*="twa-"] {
  margin-right: 6px;
}
.alert-warning {
  color: #fbebbc;
  background-color: #b99015;
  border-color: #b38b15;
}
.dropdown-menu {
  background-color: #0007;
  border-radius: 10px;
}
.dropdown-item,
.dropdown-item:focus,
.dropdown-item:hover {
  color: var(--light);
  background: none;
}
header {
  transition: background-color 200ms linear;
  z-index: 5;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}
header.scrolled {
  background-color: #2d2d2d;
}
.beer-reveal[data-beer-label]::after,
.beer-slider[data-beer-label]::after {
  background: hsla(0, 0%, 9.4%, 0.75);
}
.beer-handle {
  background: hsla(0, 0%, 12.5%, 0.66);
  color: #ccc;
}
.beer-range:focus ~ .beer-handle {
  background: hsla(0, 0%, 20.8%, 0.85);
}

/******
 Navbar 
 ******/
@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}
.nav-link.active {
  color: #ddd;
}

/**********
 Components
 **********/
.fullscreen-image {
  /* Darkens the image */
  filter: brightness(60%);
  -webkit-filter: brightness(60%);

  /* Size and position */
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: -1;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
.panel {
  width: 90%;
  margin: -30px auto 0;
  background: #343434;
  border-radius: 10px;
  padding: 30px;
  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
}
@media(min-width: 830px){
  .panel {
    padding: 30px calc(50% - 400px);
  }
}
@media(min-width: 1630px){
  .panel {
    padding: 30px calc(50% - 800px);
  }
}
.description {
  color: #eaeaea;
  font-size: 1.15em;
  font-weight: lighter;
  text-align: justify;
  text-align-last: center;
  padding: 0 calc(50% - 300px);
  margin-bottom: 2em;
}

